--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ url: https://july000.github.io
 remote_theme: sylhare/Type-on-Strap  
 title: July Blogs 
 description: "A website with blog posts and pages" 
+markdown: GFM
